# cpp-files

./: CMakeLists.txt  CMakePresets.json  README.md  clang-tidy.txt  premake5.lua  vcpkg.json
BS/: bs.cpp  premake5.lua
Graphs/: premake5.lua
cmake/: CompilerWarnings.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  Vcpkg.cmake  version.hpp.in
doc/: CMakeLists.txt  Doxyfile
include/: DynArray.h
test/: CMakeLists.txt  test.cpp
